--- a/recipes/hpp-core/meta.yaml
+++ b/recipes/hpp-core/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - pkg-config
     - doxygen
   host:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
     - urdfdom
     - assimp
@@ -38,7 +38,7 @@ requirements:
     - hpp-pinocchio
     - hpp-constraints
   run:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
 
 test:
