--- a/recipes/hpp-gui/meta.yaml
+++ b/recipes/hpp-gui/meta.yaml
@@ -34,8 +34,8 @@ requirements:
     - {{ cdt('libxext') }}               # [linux]
   host:
     - qt
-    - boost
-    - boost-cpp
+    - boost 1.72
+    - boost-cpp 1.72
     - tinyxml
     - hpp-fcl
     - hpp-util
@@ -52,14 +52,14 @@ requirements:
     - gepetto-viewer-corba
     - omniorb
     - omniorbpy
-    - python
+    - python 3.6
   run:
-    - boost
-    - boost-cpp
+    - boost 1.72
+    - boost-cpp 1.72
     - tinyxml
     - omniorb
     - omniorbpy
-    - python
+    - python 3.6
 
 test:
   requires:
