--- a/recipes/hpp-statistics/meta.yaml
+++ b/recipes/hpp-statistics/meta.yaml
@@ -25,11 +25,11 @@ requirements:
     - pkg-config
     - doxygen
   host:
-    - boost-cpp
+    - boost-cpp 1.72
     - hpp-util
 
   run:
-    - boost-cpp
+    - boost-cpp 1.72
 
 test:
   requires:
