--- a/recipes/hpp-template-corba/meta.yaml
+++ b/recipes/hpp-template-corba/meta.yaml
@@ -26,11 +26,11 @@ requirements:
     - hpp-util
     - omniorb
     - omniorbpy
-    - python
+    - python 3.6
   run:
     - omniorb
     - omniorbpy
-    - python
+    - python 3.6
 
 test:
   requires:
