--- a/recipes/hpp-constraints/meta.yaml
+++ b/recipes/hpp-constraints/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - pkg-config
     - doxygen
   host:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
     - urdfdom
     - assimp
@@ -34,7 +34,7 @@ requirements:
     - hpp-util
     - hpp-pinocchio
   run:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
 
 test:
