--- a/recipes/hpp-environments/meta.yaml
+++ b/recipes/hpp-environments/meta.yaml
@@ -23,9 +23,9 @@ requirements:
     - pkg-config
     - doxygen
   host:
-    - boost-cpp
+    - boost-cpp 1.72
   run:
-    - boost-cpp
+    - boost-cpp 1.72
 
 test:
   requires:
