--- a/recipes/hpp-manipulation/meta.yaml
+++ b/recipes/hpp-manipulation/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - pkg-config
     - doxygen
   host:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
     - urdfdom
     - assimp
@@ -37,7 +37,7 @@ requirements:
     - hpp-constraints
     - hpp-core
   run:
-    - boost-cpp
+    - boost-cpp 1.72
     - tinyxml
 
 test:
